--- a/EMR-FB/package.json
+++ b/EMR-FB/package.json
@@ -3,8 +3,6 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -34,6 +32,7 @@
     "@types/react": "^18.3.5",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "concurrently": "^8.2.2",
